--- a/index.html
+++ b/index.html
@@ -20,3 +20,46 @@
   gtag('config', 'G-P0GTNZW1SV');
 </script>
 </head>
+<body>
+    <div class="bg-1">
+
+        <header class="head">
+            <i class='bx bx-menu' id="menu"></i>
+            <nav class="nbar">
+                <i class='bx bx-moon' id="moon" ></i>
+
+                <a href="./index.html" class="click">HOME</a>
+                <a href="pages/aboutme.html" class="">ABOUT</a>
+                <div class="subnav">
+                  <button class="subnavbtn" onclick="location.href='pages/proj.html' " >PROJECTS<i class='bx bx-chevron-down'></i></button>
+                </div>
+
+                <a href="pages/cont.html">CONTACT</a>
+                <a href="pages/credit.html">CREDITS</a>
+            </nav>
+
+              <a href="#" class="name">ZANAIAH</a>
+              <div class="cc-im">
+                <img class="cc" src="./assets/img/kh logo.png">
+              </div>
+        </header>
+
+    <section class="home" id="home">
+        <div class="h" >
+            <h1>Humphrey Khalid A. Saverola</h1>
+            <h3>I am an <span class="mul">IT Student</span> </h3>
+            <p>A sophomore student of FEU Institute of Technology and currently taking Bachelor of Science in Information Technology with a specialization in CyberSecurity. As a passionate and aspiring IT professional, I am eager to delve into the dynamic and ever-evolving world of technology.</p>
+
+            <div class="socmed">
+                <a href="https://web.facebook.com/profile.php?id=100078709907254"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Fhanfulix%3Figsh%3DYmxsZ2doNmRzcWI5%26utm_source%3Dqr%26fbclid%3DIwZXh0bgNhZW0CMTAAAR1Ll2eGHCnoI7YGxVAOx_3y8XwJbrSXTFa6O-_tFQDitOr4YotEogGqc54_aem_Uaffw97uyTuqFy2VZ1bC2Q&h=AT0I0KyaqO1Zdsd7iv6NIq7QIe2WkDpfdAii9a05IS9GpBD3ZkbZ-lbSXTaAygOg3I1euJ7bcMSHvTWQ-CyTR8lYQzdXhJ6RxfC9yQOja1O32XmEfJoSPk_OpeA-Cluv3A4Z7WdSQIU0YC5kHQVMkQ"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="#"><i class='bx bxl-discord-alt' ></i></a>
+            </div>
+        </div>
+
+        <div class="h-img">
+            <img src="./assets/img/homepic.png">
+        </div>
+    </section>
+</div>
