refractor(img): adjusted the size of an image

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <i class='bx bx-moon' id="moon" ></i>
 
                 <a href="./index.html" class="click">HOME</a>
-                <a href="pages/aboutme.html" class="">ABOUT</a>
+                <a href="./pages/about/index.html" class="">ABOUT</a>
                 <div class="subnav">
-                  <button class="subnavbtn" onclick="location.href='pages/proj.html' " >PROJECTS</button>
+                  <button class="subnavbtn" onclick="location.href='pages/projects/index.html' " >PROJECTS</button>
                 </div>
 
-                <a href="pages/cont.html">CONTACT</a>
-                <a href="pages/credit.html">OVERVIEW</a>
-                <a href="pages/credit.html">CREDITS</a>
+                <a href="./pages/contacts/index.html">CONTACT</a>
+                <a href="./pages/overview/index.html">OVERVIEW</a>
+                <a href="./pages/credits/index.html">CREDITS</a>
             </nav>
               <div class="cc-im">
                 <img class="cc" src="./assets/img/kh logo.png">
@@ -45,7 +45,7 @@
 
     <section class="home" id="home">
         <div class="h" >
-            <h1>Humphrey Khalid A. Saverola</h1>
+            <h1>Khalid Saverola</h1>
             <h3>I am an <span class="mul">IT Student</span> </h3>
             <p>A 1st-Year student of FEU Institute of Technology and currently taking Bachelor of Science in Information Technology with a specialization in CyberSecurity. As a passionate and aspiring IT professional, I am eager to delve into the dynamic and ever-evolving world of technology.</p>
 
