--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -11,3 +11,49 @@
 
     <title>About Page</title>
 </head>
+<body>
+
+    <header class="head">
+        <i class='bx bx-menu' id="menu"></i>
+
+        <nav class="nbar">
+            <!-- <i class='bx bx-moon' id="moon" ></i> -->
+            <a href="../index.html" class="">HOME</a>
+            <a href="../pages/aboutme.html" class="">ABOUT</a>
+
+            <!-- <div class="subnav">
+                <button class="subnavbtn" onclick="location.href='gallery.html' " >GALLERY<i class='bx bx-chevron-down'></i></button>
+                <div class="subnav-content">
+                    <a href="drafts.html">DRAFTS</a> 
+              </div>
+            </div>  -->
+
+            <div class="subnav">
+              <button class="subnavbtn" onclick="location.href='../pages/proj.html' " >PROJECTS<i class='bx bx-chevron-down'></i></button>
+              <div class="subnav-content">
+                <a href="../pages/awd.html">AWD</a>
+              </div>
+            </div>
+
+            <a href="../pages/cont.html">CONTACT</a>
+            <a href="../pages/credit.html">CREDITS</a>
+        </nav>
+
+          <a href="#" class="name">ZANAIAH</a>
+          <div class="cc-im">
+            <img class="cc" src="../assets/img/cc.png">
+          </div>
+    </header>
+
+    <section class="about" id="about">
+        <div class="ab-img">
+            <img src="../assets/img/aboutpic.png">
+        </div>
+        <div class="ab">
+            <h2 class="hd">About<span> Me</span></h2>
+            <h3>Information Technology Student</h3>
+            <p> My name is Ava Samantha Arce and I am an IT student with a passion for web development and entrepreneurship. I was born and raised in a small town in the Philippines, where I developed an early fascination with technology and its potential to transform our world. I found joy in creating beautiful and functional websites that could connect people and businesses across the globe. My passion for technology and entrepreneurship led me to pursue a degree in IT. I am passionate about using technology to solve real-world problems and improve people's lives, and I believe that entrepreneurship is the best way to make a meaningful impact. <br>
+                <br>Looking to the future, I am excited about the possibilities that lie ahead. I am also interested in exploring other areas of technology, such as artificial intelligence and machine learning, and applying them to create new and innovative products and services.</p>
+            <a href="https://naiahhh.github.io/RESUME-AWD-FEUTECH/" class="button">Read More</a>
+        </div>
+    </section>
