feat(footer) added a footer section

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -57,3 +57,21 @@
             <a href="https://naiahhh.github.io/RESUME-AWD-FEUTECH/" class="button">Read More</a>
         </div>
     </section>
+    <footer class="footer" >
+        <div class="ftext">
+            <h1>To<span class="fc"> God</span> Be The <span> Glory!</span> </h1>
+            <div class="fsoc">
+                <a href="https://www.facebook.com/avasamanthaarce15"><i class='bx bxl-facebook'></i></a>
+                <a href="https://twitter.com/eri_zanaiah/"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.instagram.com/eri_zanaiah/"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://discord.com/channels/@me"><i class='bx bxl-discord-alt' ></i></a>
+                <a href="../pages/aboutme.html"> <i class='bx bx-up-arrow-alt' ></i></a>
+            </div>
+            <p>Disclaimer: The content provided on this platform is intended for educational purposes only.</p>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="../assets/js/lab.js"></script>
+</body>
+</html>
