feat(css): added some style

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/lab.css">
+    <link rel="stylesheet" href="../about/assets/css/style.css">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" type="image/x-icon" href="../assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="../about/assets/img/favicon-32x32.png">
 
     <title>About Page</title>
 </head>
@@ -17,61 +17,48 @@
         <i class='bx bx-menu' id="menu"></i>
 
         <nav class="nbar">
-            <!-- <i class='bx bx-moon' id="moon" ></i> -->
-            <a href="../index.html" class="">HOME</a>
-            <a href="../pages/aboutme.html" class="">ABOUT</a>
-
-            <!-- <div class="subnav">
-                <button class="subnavbtn" onclick="location.href='gallery.html' " >GALLERY<i class='bx bx-chevron-down'></i></button>
-                <div class="subnav-content">
-                    <a href="drafts.html">DRAFTS</a> 
-              </div>
-            </div>  -->
+            <a href="../../index.html" class="">HOME</a>
+            <a href="../about/index.html" class="">ABOUT</a>
 
             <div class="subnav">
-              <button class="subnavbtn" onclick="location.href='../pages/proj.html' " >PROJECTS<i class='bx bx-chevron-down'></i></button>
-              <div class="subnav-content">
-                <a href="../pages/awd.html">AWD</a>
-              </div>
+              <button class="subnavbtn" onclick="location.href='../pages/proj.html' " >PROJECTS</i></button>
             </div>
 
-            <a href="../pages/cont.html">CONTACT</a>
-            <a href="../pages/credit.html">CREDITS</a>
+            <a href="../contacts/index.html">CONTACT</a>
+            <a href="./pages/overview/index.html">OVERVIEW</a>
+            <a href="../credits/index.html">CREDITS</a>
         </nav>
-
-          <a href="#" class="name">ZANAIAH</a>
           <div class="cc-im">
-            <img class="cc" src="../assets/img/cc.png">
+            <img class="cc" src="../about/assets/img/kh logo.png">
           </div>
     </header>
 
     <section class="about" id="about">
         <div class="ab-img">
-            <img src="../assets/img/aboutpic.png">
+            <img src="../about/assets/img/aboutpic.png">
         </div>
         <div class="ab">
             <h2 class="hd">About<span> Me</span></h2>
-            <h3>Information Technology Student</h3>
-            <p> My name is Ava Samantha Arce and I am an IT student with a passion for web development and entrepreneurship. I was born and raised in a small town in the Philippines, where I developed an early fascination with technology and its potential to transform our world. I found joy in creating beautiful and functional websites that could connect people and businesses across the globe. My passion for technology and entrepreneurship led me to pursue a degree in IT. I am passionate about using technology to solve real-world problems and improve people's lives, and I believe that entrepreneurship is the best way to make a meaningful impact. <br>
-                <br>Looking to the future, I am excited about the possibilities that lie ahead. I am also interested in exploring other areas of technology, such as artificial intelligence and machine learning, and applying them to create new and innovative products and services.</p>
-            <a href="https://naiahhh.github.io/RESUME-AWD-FEUTECH/" class="button">Read More</a>
+            <h3>Information Technology Student specialization in CyberSecurity</h3>
+            <p>Hello! I'm Humphrey Khalid A. Saverola, a dedicated first-year student pursuing a Bachelor of Science in Information Technology with a specialization in cybersecurity. My passion lies in understanding the intricacies of digital security and developing innovative solutions to protect data and systems from cyber threats.
+                As I embark on this educational journey, I'm eager to deepen my knowledge and skills in cybersecurity, learning from both academic coursework and practical experiences. My goal is to become a proficient cybersecurity professional, contributing to a safer digital world.</p>
+            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.canva.com%2Fdesign%2FDAF9OTuup4U%2FlOZ1gmODKZYYRBv7GpFyhA%2Fview%3Futm_content%3DDAF9OTuup4U%26utm_campaign%3Ddesignshare%26utm_medium%3Dlink%26utm_source%3Deditor%26fbclid%3DIwZXh0bgNhZW0CMTAAAR151dq3bLV6QF6R-VWZfWTXpFRRmLIBwPIEAwdWE4BH2ZMKaFRnSS165yM_aem_TP-S6rIhHxu5C779yNfnvg&h=AT2u5Rqy1dxMxpm4yZuY_nKTT_DOi7DPmuHOllaZT4udOxwl5aCgEABVeHazUe7ds5ThEK-CIpvL52xlEYGT-NAEdTsWISjaFVUcpysvtnVQQP1PAM9VQYS3zc06jYlsYz6NDBMEI-ccoSu3vl7u5g" class="button">Read More</a>
         </div>
     </section>
     <footer class="footer" >
         <div class="ftext">
             <h1>To<span class="fc"> God</span> Be The <span> Glory!</span> </h1>
             <div class="fsoc">
-                <a href="https://www.facebook.com/avasamanthaarce15"><i class='bx bxl-facebook'></i></a>
-                <a href="https://twitter.com/eri_zanaiah/"><i class='bx bxl-twitter' ></i></a>
-                <a href="https://www.instagram.com/eri_zanaiah/"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="https://discord.com/channels/@me"><i class='bx bxl-discord-alt' ></i></a>
-                <a href="../pages/aboutme.html"> <i class='bx bx-up-arrow-alt' ></i></a>
+                <a href="https://web.facebook.com/profile.php?id=100078709907254"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Fhanfulix%3Figsh%3DYmxsZ2doNmRzcWI5%26utm_source%3Dqr%26fbclid%3DIwZXh0bgNhZW0CMTAAAR1Ll2eGHCnoI7YGxVAOx_3y8XwJbrSXTFa6O-_tFQDitOr4YotEogGqc54_aem_Uaffw97uyTuqFy2VZ1bC2Q&h=AT0I0KyaqO1Zdsd7iv6NIq7QIe2WkDpfdAii9a05IS9GpBD3ZkbZ-lbSXTaAygOg3I1euJ7bcMSHvTWQ-CyTR8lYQzdXhJ6RxfC9yQOja1O32XmEfJoSPk_OpeA-Cluv3A4Z7WdSQIU0YC5kHQVMkQ"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class='bx bxl-discord-alt' ></i></a>
+            <a href="./index.html"> <i class='bx bx-up-arrow-alt' ></i></a>
             </div>
-            <p>Disclaimer: The content provided on this platform is intended for educational purposes only.</p>
         </div>
     </footer>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="../assets/js/lab.js"></script>
+    <script src="../about/assets/js/scripts.js"></script>
 </body>
 </html>
