refractor(links): fixed some links paths

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -21,7 +21,7 @@
             <a href="../about/index.html" class="">ABOUT</a>
 
             <div class="subnav">
-              <button class="subnavbtn" onclick="location.href='../pages/proj.html' " >PROJECTS</i></button>
+              <button class="subnavbtn" onclick="location.href='../projects/index.html' " >PROJECTS</i></button>
             </div>
 
             <a href="../contacts/index.html">CONTACT</a>
