refractor(index): changes the text

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -47,7 +47,7 @@
     </section>
     <footer class="footer" >
         <div class="ftext">
-            <h1>To<span class="fc"> God</span> Be The <span> Glory!</span> </h1>
+            <h1>Believe in<span class="fc"> Your Self </span> and <span> God!</span> </h1>
             <div class="fsoc">
                 <a href="https://web.facebook.com/profile.php?id=100078709907254"><i class='bx bxl-facebook'></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
