--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -12,3 +12,85 @@
 
     <title>Projects Page</title>
 </head>
+<body>
+    <header class="head">
+        <i class='bx bx-menu' id="menu"></i>
+
+        <nav class="nbar">
+            <!-- <i class='bx bx-moon' id="moon" ></i> -->
+            <a href="../../index.html" class="">HOME</a>
+            <a href="../about/index.html" class="">ABOUT</a>
+
+
+            <div class="subnav">
+              <button class="subnavbtn" onclick="location.href='../projects/index.html' " > PROJECTS</i></button>
+            </div>
+
+            <a href="../contacts/index.html">CONTACT</a>
+            <a href="../credits/index.html">CREDITS</a>
+        </nav>
+          <div class="cc-im">
+            <img class="cc" src="../projects/assets/img/kh logo.png">
+          </div>
+    </header>
+
+    <section class="projects" id="projects">
+        <h2 class="hd">Web<span> Design</span></h2>
+
+        <div class="projcon">
+            <div class="projbox">
+                <i class='bx bx-desktop'></i>
+                <h3>ANIMATION</h3>
+                <a href="https://naiahhh.github.io/ANIMATION-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>  
+            </div>
+
+            <div class="projbox">
+                <i class='bx bxs-file-image'></i>
+                <h3>RESUME</h3>
+                <a href="https://naiahhh.github.io/RESUME-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bxs-calculator' ></i>
+                <h3>CALCULATOR</h3>
+                <a href="https://naiahhh.github.io/CALCULATOR-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bxs-calendar'></i>
+                <h3>WEEK BUTTONS</h3>
+                <a href="https://naiahhh.github.io/BUTTON-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bx-search-alt'></i>
+                <h3>SEARCH BUTTON</h3>
+                <a href="https://naiahhh.github.io/SEARCH-AWD-BUTTON/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bxs-flame'></i>
+                <h3>ILLUMINATION</h3>
+                <a href="https://naiahhh.github.io/ILLUMINATION-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bxs-bell-ring' ></i>
+                <h3>BELL NOTIFICATION</h3>
+                <a href="https://naiahhh.github.io/BELL-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bxs-face' ></i>
+                <h3>JUMP FACES</h3>
+                <a href="https://naiahhh.github.io/JUMP-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+            <div class="projbox">
+                <i class='bx bx-shape-polygon' ></i>
+                <h3>SHAPE HOVER</h3>
+                <a href="https://naiahhh.github.io/HOVER-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+            </div>
+
+        </div>
+    </section>
