feat(js): added some java scripts

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <section class="projects" id="projects">
-        <h2 class="hd">Web<span> Design</span></h2>
+        <h2 class="hd">Web<span> Design</span> Lab and Lec</h2>
 
         <div class="projcon">
             <div class="projbox">
