--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -27,6 +27,7 @@
             </div>
 
             <a href="../contacts/index.html">CONTACT</a>
+            <a href="../overview/index.html">OVERVIEW</a>
             <a href="../credits/index.html">CREDITS</a>
         </nav>
           <div class="cc-im">
@@ -40,57 +41,44 @@
         <div class="projcon">
             <div class="projbox">
                 <i class='bx bx-desktop'></i>
-                <h3>ANIMATION</h3>
-                <a href="https://naiahhh.github.io/ANIMATION-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>  
+                <h3>SW1</h3>
+                <a href="https://www.canva.com/design/DAGK_z5Mpw4/y5Uv6ryGBbFW7xq1SVCY4A/view?utm_content=DAGK_z5Mpw4&utm_campaign=designshare&utm_medium=link&utm_source=editor" id="sbtn" class="button">View Here</a>  
             </div>
 
             <div class="projbox">
                 <i class='bx bxs-file-image'></i>
-                <h3>RESUME</h3>
-                <a href="https://naiahhh.github.io/RESUME-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+                <h3>SW2</h3>
+                <a href="https://khalidsaverola.github.io/WD-seatwork2again/" id="sbtn" class="button">View Here</a>
             </div>
 
             <div class="projbox">
-                <i class='bx bxs-calculator' ></i>
-                <h3>CALCULATOR</h3>
-                <a href="https://naiahhh.github.io/CALCULATOR-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+                <i class='bx bxs-book-content' ></i>
+                <h3>SW3</h3>
+                <a href="https://khalidsaverola.github.io/WD-seatwork3/" id="sbtn" class="button">View Here</a>
             </div>
 
             <div class="projbox">
-                <i class='bx bxs-calendar'></i>
-                <h3>WEEK BUTTONS</h3>
-                <a href="https://naiahhh.github.io/BUTTON-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+                <i class='bx bxs-group'></i>
+                <h3>SW4</h3>
+                <a href="https://khalidsaverola.github.io/WD-Seatwork4_2024/" id="sbtn" class="button">View Here</a>
             </div>
 
             <div class="projbox">
-                <i class='bx bx-search-alt'></i>
-                <h3>SEARCH BUTTON</h3>
-                <a href="https://naiahhh.github.io/SEARCH-AWD-BUTTON/" id="sbtn" class="button">View Here</a>
+                <i class='bx bxs-file-css'></i>
+                <h3>CSS Practical</h3>
+                <a href="https://www.canva.com/design/DAGK_5ARZpQ/EOSampuujnWylVFmORQ8rw/view?utm_content=DAGK_5ARZpQ&utm_campaign=designshare&utm_medium=link&utm_source=editor" id="sbtn" class="button">View Here</a>
             </div>
 
             <div class="projbox">
-                <i class='bx bxs-flame'></i>
-                <h3>ILLUMINATION</h3>
+                <i class='bx bxs-file-js'></i>
+                <h3>Javascript</h3>
                 <a href="https://naiahhh.github.io/ILLUMINATION-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
             </div>
 
             <div class="projbox">
                 <i class='bx bxs-bell-ring' ></i>
-                <h3>BELL NOTIFICATION</h3>
+                <h3>Bootstrap</h3>
                 <a href="https://naiahhh.github.io/BELL-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
             </div>
-
-            <div class="projbox">
-                <i class='bx bxs-face' ></i>
-                <h3>JUMP FACES</h3>
-                <a href="https://naiahhh.github.io/JUMP-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
-            </div>
-
-            <div class="projbox">
-                <i class='bx bx-shape-polygon' ></i>
-                <h3>SHAPE HOVER</h3>
-                <a href="https://naiahhh.github.io/HOVER-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
-            </div>
-
         </div>
     </section>
