--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -72,7 +72,7 @@
             <div class="projbox">
                 <i class='bx bxs-file-js'></i>
                 <h3>Javascript</h3>
-                <a href="https://naiahhh.github.io/ILLUMINATION-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+                <a href="https://www.canva.com/design/DAGLB5_z_Uc/Y2N5D70ofT4dHO5nehpJLQ/view?utm_content=DAGLB5_z_Uc&utm_campaign=designshare&utm_medium=link&utm_source=editor" id="sbtn" class="button">View Here</a>
             </div>
 
             <div class="projbox">
