refractor(body): fixes ome links

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -78,7 +78,7 @@
             <div class="projbox">
                 <i class='bx bxs-bell-ring' ></i>
                 <h3>Bootstrap</h3>
-                <a href="https://naiahhh.github.io/BELL-AWD-FEUTECH/" id="sbtn" class="button">View Here</a>
+                <a href="https://khalidsaverola.github.io/WD-Saverola-Bootstrap-Web/" id="sbtn" class="button">View Here</a>
             </div>
         </div>
     </section>
