feat(main): added the main content

--- a/pages/contacts/index.html
+++ b/pages/contacts/index.html
@@ -32,3 +32,27 @@
             <img class="cc" src="../contacts/assets/img/kh logo.png">
           </div>
     </header>
+    <section class="contact" id="contact">
+        <h2 class="hd">Contact<span> Me</span></h2>
+        <div class="cont">
+            <div class="contbox">
+                    <a href="https://www.google.com/maps/place/Red+Cedar/@14.5624019,121.1027787,19z/data=!4m9!1m2!10m1!1e2!3m5!1s0x3397c70046ac02eb:0x89052a455fdf942b!8m2!3d14.5622125!4d121.1027344!16s%2Fg%2F11vpyl9b1m?entry=ttu"><i class='bx bxs-home'></i></a> 
+                    <h3>ADDRESS</h3>
+                    <p>Lot 8 Blk 3 Red Cedar St., Greenwood Execuive Village, Pasig City, Pinagbuhatan</p>
+            </div>
+
+            <div class="contbox">
+                <i class='bx bxs-phone-call'></i>
+                <h3>PHONE NUMBER</h3>
+                <p>+63 945 499 4737</p>
+            </div>
+
+            <div class="contbox">
+                <a href="mailto:202210920@fit.edu.ph" ><i class='bx bxs-envelope' ></i></a>
+                <h3>FEU TECH ACCOUNT</h3>
+                <p>202312369@fit.edu.ph</p>
+            </div>
+            </div>
+        </div>
+        </div>
+    </section>
