feat(header): added a header

--- a/pages/overview/index.html
+++ b/pages/overview/index.html
@@ -12,3 +12,22 @@
     <title>Overview Page</title>
 </head>
 <body>
+    <header class="head">
+        <i class='bx bx-menu' id="menu"></i>
+
+        <nav class="nbar">
+            <a href="../../index.html" class="">HOME</a>
+            <a href="../about/index.html" class="">ABOUT</a>
+
+            <div class="subnav">
+              <button class="subnavbtn" onclick="location.href='../projects/index.html' " >PROJECTS</i></button>
+            </div>
+
+            <a href="../contacts/index.html">CONTACT</a>
+            <a href="../overview/index.html">OVERVIEW</a>
+            <a href="../credits/index.html">CREDITS</a>
+        </nav>
+          <div class="cc-im">
+            <img class="cc" src="../overview/assets/img/kh logo.png">
+          </div>
+    </header>
