feat(footer): added a footer

--- a/pages/overview/index.html
+++ b/pages/overview/index.html
@@ -32,7 +32,7 @@
           </div>
     </header>
     <section class="contact" id="contact">
-        <h2 class="hd">My Project<span>Overview</span></h2>
+        <h2 class="hd">My Project <span>Overview</span></h2>
         <div class="cont">
             <div class="contbox">
                 <h3>AT0I0KyaqO1Zdsd7iv6NIq7QIe2WkDpfdAii9a05IS9GpBD3ZkbZ-lbSXTaAygOg3I1euJ7bcMSHvTWQ-CyTR8lYQzdXhJ6RxfC9yQOja1O32XmEfJoSPk_OpeA-Cluv3A4Z7WdSQIU0YC5kHQVMkQ</h3>
@@ -41,3 +41,20 @@
         </div>
         </div>
     </section>
+    <footer class="footer" >
+        <div class="ftext">
+            <h1>Believe in<span class="fc"> Your Self </span> and <span> God!</span> </h1>
+            <div class="fsoc">
+                <a href="https://web.facebook.com/profile.php?id=100078709907254"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Fhanfulix%3Figsh%3DYmxsZ2doNmRzcWI5%26utm_source%3Dqr%26fbclid%3DIwZXh0bgNhZW0CMTAAAR1Ll2eGHCnoI7YGxVAOx_3y8XwJbrSXTFa6O-_tFQDitOr4YotEogGqc54_aem_Uaffw97uyTuqFy2VZ1bC2Q&h=AT0I0KyaqO1Zdsd7iv6NIq7QIe2WkDpfdAii9a05IS9GpBD3ZkbZ-lbSXTaAygOg3I1euJ7bcMSHvTWQ-CyTR8lYQzdXhJ6RxfC9yQOja1O32XmEfJoSPk_OpeA-Cluv3A4Z7WdSQIU0YC5kHQVMkQ"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class='bx bxl-discord-alt' ></i></a>
+            <a href="./index.html"> <i class='bx bx-up-arrow-alt' ></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="../overview/assets/js/scripts.js"></script>
+</body>
+</html>
