feat(css): added a css styles

--- a/pages/overview/index.html
+++ b/pages/overview/index.html
@@ -35,7 +35,7 @@
         <h2 class="hd">My Project <span>Overview</span></h2>
         <div class="cont">
             <div class="contbox">
-                <h3>AT0I0KyaqO1Zdsd7iv6NIq7QIe2WkDpfdAii9a05IS9GpBD3ZkbZ-lbSXTaAygOg3I1euJ7bcMSHvTWQ-CyTR8lYQzdXhJ6RxfC9yQOja1O32XmEfJoSPk_OpeA-Cluv3A4Z7WdSQIU0YC5kHQVMkQ</h3>
+                <h3>This "Personal Website v.2" project aims to create a comprehensive online portfolio that highlights both design prowess and technical skills in web development. This website will consist of a minimum of 5 pages, each designed with unique layouts to showcase various features. The content will include resume-like information, a project showcase section, and an engaging overview page explaining the purpose and content of the website.</h3>
             </div>
             </div>
         </div>
