--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <a href="../contacts/index.html">CONTACT</a>
-            <a href="./pages/overview/index.html">OVERVIEW</a>
+            <a href="../overview/index.html">OVERVIEW</a>
             <a href="../credits/index.html">CREDITS</a>
         </nav>
           <div class="cc-im">
