feat(main): added the main content

--- a/pages/credits/index.html
+++ b/pages/credits/index.html
@@ -31,3 +31,67 @@
             <img class="cc" src="../credits/assets/img/kh logo.png">
           </div>
     </header>
+    <section class="credits" id="credits">
+        <h2 id="give" class="hd">Give<span> Thanks</span></h2>
+        <p> With Special Participation</p>
+        <div class="crecon">
+            <div class="crebox">
+                <a href="https://boxicons.com/?query=facebook">
+                    <img class="im" src="../credits/assets/img/box.png"  >
+                </a>
+            
+            </div>
+            <div class="crebox">
+                <a href="https://fonts.google.com/specimen/Poppins">
+                    <img class="im" src="../credits/assets/img/font.png"  >
+                </a>
+            </div>
+
+            <div class="crebox">
+                <a href="https://colorhunt.co/palettes/green">
+                    <img class="im" src="../credits/assets/img/hunt.png"  >
+                </a>
+            </div>
+
+            <div class="crebox">
+                <a href="https://www.remove.bg/upload">
+                    <img class="im" src="../credits/assets/img/rem.png"  >
+                </a>
+            </div>
+            
+            <div class="crebox">
+                <a href="https://github.com/mattboldt/typed.js/">
+                    <img class="im" src="../credits/assets/img/glogo.png"  >
+                </a>
+            </div>
+
+            <div class="crebox">
+                <a href="https://www.youtube.com/results?search_query=portfolio+website+html+css+javascript">
+                    <img class="im" src="../credits/assets/img/you.png"  >
+                </a>
+            </div>
+
+            <div class="crebox">
+                <a href="https://www.youtube.com/watch?v=Tkp3FDgOueM&ab_channel=Codehal">
+                    <img class="im" src="../credits/assets/img/code.png"  >
+                </a>
+            </div>
+            <div class="crebox">
+                <a href="https://favicon.io/emoji-favicons/">
+                    <img class="im" src="../credits/assets/img/fav.png"  >
+                </a>
+            </div>
+
+            <div class="crebox">
+                <a href="https://www.w3schools.com/css/default.asp">
+                    <img class="im" src="../credits/assets/img/ww.png"  >
+                </a>
+            </div>
+
+            <div class="crebox">
+                <a href="https://www.canva.com/">
+                    <img class="im" src="../credits/assets/img/can.png"  >
+                </a>
+            </div>
+            </div>
+    </section>
