docs(readme): fixes readme

--- a/pages/credits/index.html
+++ b/pages/credits/index.html
@@ -32,8 +32,7 @@
           </div>
     </header>
     <section class="credits" id="credits">
-        <h2 id="give" class="hd">Give<span> Thanks</span></h2>
-        <p> With Special Participation</p>
+        <h2 id="give" class="hd">Give<span> Thanks</span> To All!</h2>
         <div class="crecon">
             <div class="crebox">
                 <a href="https://boxicons.com/?query=facebook">
